objects/LLC_BI__Pricing_Stream__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Context_Id__c</fullName>
        <description>This field is required. It is a unique identifier and can also be used as an external ID or lookupKey for data purposes.</description>
        <externalId>true</externalId>
        <label>Context Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>This field is required. It is manually populated. It identifies the date that a Pricing Stream Record becomes or became active.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>This field is required. It is manually populated. It identifies the date that a Pricing Stream Record becomes or became inactive.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Payment_Stream__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically set. It indicates whether a Payment Stream record is being added. Otherwise, a Rate Stream is being added.</description>
        <label>Is Payment Stream</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Rate_Stream__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically set. It indicates whether a Rate Stream record is being added. Otherwise, a Pricing Stream is being added.</description>
        <label>Is Rate Stream</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field to display the loan associated with the rate and payment structure.</description>
        <inlineHelpText>This system-populated lookup field displays the loan associated with the rate and payment structure.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Pricing Streams</relationshipLabel>
        <relationshipName>Pricing_Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Period_Type__c</fullName>
        <description>The system automatically populates this picklist field based on field mappings for rate and payment structure. By default, this picklist is blank.</description>
        <inlineHelpText>This system-populated field displays a value based on field mappings for rate and payment structure.</inlineHelpText>
        <label>Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Teaser</fullName>
                </value>
                <value>
                    <fullName>Draw</fullName>
                </value>
                <value>
                    <fullName>Repayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Option__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this lookup field with the Pricing Option record. The pricing stream fields refer to this lookup field. By default, this field is blank.</description>
        <inlineHelpText>This system-populated field displays the unique identifier for the Pricing Option record.</inlineHelpText>
        <label>Pricing Option</label>
        <referenceTo>LLC_BI__Pricing_Option__c</referenceTo>
        <relationshipLabel>Pricing Streams</relationshipLabel>
        <relationshipName>Pricing_Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sequence__c</fullName>
        <description>This field is automatically set. It indicates the sequence of payments for a Pricing Stream record. The sequence is ascending.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Length__c</fullName>
        <description>This field is required. It is manually populated. It indicates the payment term length for a Pricing Stream record.</description>
        <label>Term Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Unit__c</fullName>
        <description>Units in which the term is measured.  Corresponds to custom metadata Periods with Units category.</description>
        <label>Term Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit_Semi_Monthly</fullName>
                </value>
                <value>
                    <fullName>Unit_Monthly</fullName>
                    <default>true</default>
                    <label>Unit_Monthly</label>
                </value>
                <value>
                    <fullName>Unit_Bi_Monthly</fullName>
                </value>
                <value>
                    <fullName>Unit_Quarterly</fullName>
                </value>
                <value>
                    <fullName>Unit_Semi_Annually</fullName>
                </value>
                <value>
                    <fullName>Unit_Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pricing Stream</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Streams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>